force-app/main/default/objects/Pack_de_servicio__c/Pack_de_servicio__c.object-meta.xml
<CustomObject>
    <label>Pack de servicio</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packs de servicio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>