force-app/main/default/objects/Pack_de_servicio__c/fields/Consumo_maximo__c.field-meta.xml
<CustomField>
    <fullName>Consumo_maximo__c</fullName>
    <label>Consumo máximo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>