force-app/main/default/objects/Pack_de_servicio__c/fields/Importe_mensual__c.field-meta.xml
<CustomField>
    <fullName>Importe_mensual__c</fullName>
    <label>Importe mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>