force-app/main/default/objects/Pack_de_servicio__c/fields/Name_Pack_maestros__c.field-meta.xml
<CustomField>
    <fullName>Name_Pack_maestros__c</fullName>
    <label>Name Pack maestros</label>
    <length>20</length>
    <type>Text</type>
</CustomField>