force-app/main/default/objects/Pack_de_servicio__c/fields/Numero_de_pack__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_pack__c</fullName>
    <label>Número de pack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>