force-app/main/default/objects/Pack_de_servicio__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Packs de servicio</relationshipLabel>
    <relationshipName>Packs_de_servicio</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>