force-app/main/default/objects/Pack_de_servicio__c/fields/Total_importe__c.field-meta.xml
<CustomField>
    <fullName>Total_importe__c</fullName>
    <label>Total importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>